--- a/src/app/distribucion/distribucion.component.html
+++ b/src/app/distribucion/distribucion.component.html
@@ -6,14 +6,14 @@
 			</div>
 			<div class="panel-body">
 				<div class="row">
-					<div class="col-md-3">
+					<div class="col-md-4">
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<h3 class="panel-title">Parametros de entrada</h3>
 							</div>
 							<div class="panel-body">
 								<div class="row">
-									<div class="col-md-10 col-md-offset-1">
+									<div class="col-md-4 col-md-offset-1">
 										<form [formGroup]="formulario" (ngSubmit)="calcularFuncion()">
 											<div class="form-group">
 												<label for="numero">Número</label>
@@ -101,7 +101,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-5">
+					<div class="col-md-8">
 						<div class="panel panel-default">
 							<div class="panel-heading">
 								<h3 class="panel-title">Grafico</h3>
@@ -144,28 +144,57 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-4">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h3 class="panel-title">Resultados</h3>
-							</div>
-							<div class="panel-body">
-								<div class="row">
-									<div class="col-md-10 col-md-offset-1">
-										<textarea class="form-control" rows="15" id="textArea"> {{datos}} </textarea>
-									</div>
-								</div>
-							</div>
-              <div class="panel-footer">
-                <div class="text-center">
-                  <button large type="submit" class="btn btn-primary">Imprimir Reporte</button>
+
+
+
+
+				</div>
+
+
+        <div class="col-md-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Resultados</h3>
+            </div>
+            <div class="panel-body">
+              <div class="row" >
+                <div class="table-responsive ">
+                  <!--<textarea class="form-control" rows="15" id="textArea"> {{datos}} </textarea>
+-->
+                  <table class="table-hover table-bordered text-center">
+                    <tr>
+                      <th  *ngFor="let columna of ejeX">
+                      <span>
+                        {{columna}}
+                      </span>
+                      </th>
+                    </tr>
+                    <tr >
+                      <th *ngFor="let fila of ejeY">
+                        <span>
+                          {{fila}}
+                        </span>
+                      </th>
+                    </tr>
+                  </table>
+
+
+
                 </div>
               </div>
-						</div>
-					</div>
-				</div>
+            </div>
+            <div class="panel-footer">
+              <div class="text-center">
+                <button large type="submit" class="btn btn-primary" (click)=archpdf()>Imprimir Reporte</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
 			</div>
 		</div>
 	</div>
 </div>
+
 <!--final ngIf distribucion-->
